♻️ refactor(#29): delete 추가 및 save저장 방법 수정
